// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InventoryTabs Component should handle updating through redux state with component: dispatch, component 1`] = `
[
  [
    {
      "tabs": {
        "undefined": 1,
      },
      "type": "SET_INVENTORY_TAB",
    },
  ],
]
`;

exports[`InventoryTabs Component should handle updating through redux state with hook: dispatch, hook 1`] = `
[
  [
    {
      "tabs": {
        "lorem": 1,
      },
      "type": "SET_INVENTORY_TAB",
    },
  ],
]
`;

exports[`InventoryTabs Component should render a basic component: basic 1`] = `
<Fragment>
  <Title
    className="sr-only"
    headingLevel="h2"
  >
    t(curiosity-inventory.tabHeading, {"count":3})
  </Title>
  <Tabs
    activeTab={0}
    className=""
    defaultActiveTab={0}
    hasOverflowScroll={false}
    onTab={[Function]}
    tabs={
      [
        {
          "active": false,
          "content": "ipsum",
          "title": "lorem",
        },
        {
          "active": false,
          "content": "amet",
          "title": "sit",
        },
        {
          "active": false,
          "content": <GenericComponent />,
          "title": "t(curiosity-inventory.tabSubHeading, {"count":2})",
        },
      ]
    }
  />
</Fragment>
`;

exports[`InventoryTabs Component should return an empty render when disabled: disabled component 1`] = `""`;
